--- a/RWAEShop/appsettings.json
+++ b/RWAEShop/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default":"Server=localhost\\SQLEXPRESS;Database=EShop;User Id=sa;Password=password;TrustServerCertificate=True"
+    "Default": "Server=DESKTOP-8FF8LB9\\SQLEXPRESS;Database=EShop; User Id=sa; Password=password; TrustServerCertificate=True; "
   }
 }
