Implemented Uerr Controller and Security

--- a/RWAEShop/appsettings.json
+++ b/RWAEShop/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-8FF8LB9\\SQLEXPRESS;Database=EShop; User Id=sa; Password=password; TrustServerCertificate=True; "
+  },
+  "JWT": {
+    "SecureKey": "j43^Gshw!qP$1@lEkb#8UZv&DsxN^R5X?2L%zWvtpXj!lF~A4eM",
+    "Expiration": 60
   }
+
 }
