--- a/RWAEshopDAL/RWAEshopDAL.csproj
+++ b/RWAEshopDAL/RWAEshopDAL.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SessionService\" />
+    <Folder Include="SessionModel\" />
+  </ItemGroup>
+
 </Project>
