Finished UserControllerMvc and Login and Register form

--- a/RWAEShopMVC/appsettings.json
+++ b/RWAEShopMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-8FF8LB9\\SQLEXPRESS;Database=EShop; User Id=sa; Password=password; TrustServerCertificate=True; "
+  }
 }
