--- a/RWAEShop/RWAEShop.csproj
+++ b/RWAEShop/RWAEShop.csproj
@@ -16,6 +16,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
+	    <PrivateAssets>all</PrivateAssets>
+	</PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
